--- a/App1/Resources/layout/Main.axml
+++ b/App1/Resources/layout/Main.axml
@@ -1,18 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ToggleButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Conectar"
-        android:id="@+id/toggleButton1"
-        android:layout_marginLeft="100dp"
-        android:layout_marginRight="100dp" />
-    <TextView
-        android:text="Recebido"
-        android:layout_width="125dp"
-        android:layout_height="match_parent"
-        android:id="@+id/textView1" />
-</LinearLayout>
+<AbsoluteLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:id="@+id/mainScreen" >
+	<GridLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:orientation="vertical"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:columnCount="6"
+		android:rowCount="3"
+		android:id="@+id/contentScreen" >
+		<Button
+			android:text="Up"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_row="0"
+			android:layout_column="1"
+			android:id="@+id/btnUp" />
+		<Button
+			android:text="Down"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_row="2"
+			android:layout_column="1"
+			android:id="@+id/btnDown" />
+		<Button
+			android:text="Left"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_row="1"
+			android:layout_column="0"
+			android:id="@+id/btnLeft" />
+		<Button
+			android:text="Right"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_row="1"
+			android:layout_column="2"
+			android:id="@+id/btnRight" />
+		<Button
+			android:text="Right"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_row="1"
+			android:layout_column="4"
+			android:id="@+id/btnHeadLeft" />
+		<Button
+			android:text="Left"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_row="1"
+			android:layout_column="5"
+			android:id="@+id/btnHeadRight" />
+		<Space
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_row="1"
+			android:layout_column="3"
+			android:id="@+id/space1" />
+	</GridLayout>
+	<RelativeLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical"
+		android:background="#dd333333"
+		android:id="@+id/overlayScreen" >
+		<Button
+			android:text="Conectar"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_centerHorizontal="true"
+			android:layout_alignParentBottom="true"
+			android:textSize="15sp"
+			android:id="@+id/btnConnect" />
+		<TextView
+			android:text="É necessário conectar-se ao robô para utilizar as funcionalidades do aplicativo."
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_centerHorizontal="true"
+			android:textAlignment="center"
+			android:textSize="20sp"
+			android:id="@+id/textView1" />
+	</RelativeLayout>
+</AbsoluteLayout>
